ratelimting/ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-ingress
  namespace: default
  labels:
    app: my-app-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-ingress
  template:
    metadata:
      labels:
        app: my-app-ingress
    spec:
      containers:
      - name: my-app-ingress
        image: haproxytech/kubernetes-ingress:latest
        args:
          - --http-bind-port=8080
          - --ingress.class=haproxy
        ports:
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 443


---
apiVersion: v1
kind: Service
metadata:
  name: my-app-ingress
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: my-app-ingress
  ports:
    - name: http
      protocol: TCP
      port: 5678
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
