ratelimting/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    ingress.class: "haproxy"
    haproxy.org/path-rewrite: /
spec:
  ingressClassName: haproxy
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port:
              number: 5678


#  apiVersion: networking.k8s.io/v1
#   kind: Ingress
#   metadata:
#     name: web-ingress
#     namespace: default
#     annotations:
#       ingress.class: "haproxy"
#   spec:
#     rules:
#     - host: webdemo.com
#       http:
#         paths:
#         - path: /
#           backend:
#             serviceName: web
#             servicePort: 80
